--- a/asserts/css/style.css
+++ b/asserts/css/style.css
@@ -16,6 +16,17 @@ body, html {
     width: 100%;
     height: 100%;
   }
+  #clickCounter {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-Size: 100px;
+    font-Weight: bold;
+    color: #000;
+    display: none;
+    z-Index: 1000;
+  }
   #bigWord {
     position: fixed;
     left: 50%;
